Add initial setup for  project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.data.mongodb.auto-index-creation=true
 
 
 #spring.data.mongodb.uri=mongodb\://localhost\:27017/jobportal2
-spring.data.mongodb.uri=mongodb+srv://imviveksaw:foBHgkY66stvpz0w@findjob.ywp0e.mongodb.net/FindJob?retryWrites=true&w=majority&appName=FindJob
+spring.data.mongodb.uri=mongodb+srv://imviveksaw:BkqBfxDITxxQc2It@jobportal.ywp0e.mongodb.net/JobPortal?retryWrites=true&w=majority&appName=JobPortal
 
 
 #Email Properties
